tests/integration/snapshots/integration__e2e__empty_workflow.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().input(input_under_test(&format!(\"{tc}\"))).run()?"
---
No findings to report. Good job! (2 suppressed)
