tests/integration/snapshots/integration__e2e__invalid_config_file.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).config(if cfg!(windows) { \"NUL\" } else\n{ \"/dev/null\" }).input(input_under_test(\"e2e-menagerie\")).run()?"
---
fatal: no audit was performed
error: failed to load config: missing field `rules`
 = note: check your configuration file for errors
 = note: see: https://woodruffw.github.io/zizmor/configuration/
