tests/integration/snapshots/integration__e2e__invalid_inputs-10.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).input(input_under_test(&format!(\"invalid/{action_tc}/action.yml\"))).run()?"
---
fatal: no audit was performed
failed to register input: @@INPUT@@

Caused by:
    0: invalid input structure
       
       Caused by:
           0: invalid YAML syntax in workflow: file://@@INPUT@@
           1: empty input
    1: invalid input structure
       
       Caused by:
           0: invalid YAML syntax in action: file://@@INPUT@@
           1: empty input
    2: failed to register input as workflow or action
