tests/integration/snapshots/integration__e2e__invalid_inputs-3.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).input(input_under_test(&format!(\"invalid/{tc}.yml\"))).run()?"
---
fatal: no audit was performed
failed to register input: @@INPUT@@

Caused by:
    0: invalid input structure
       
       Caused by:
           0: couldn't parse input as workflow: file://@@INPUT@@
           1: null is not of type "object"
              
    1: invalid input structure
       
       Caused by:
           0: couldn't parse input as action: file://@@INPUT@@
           1: null is not of type "object"
              
    2: failed to register input as workflow or action
