tests/integration/snapshots/integration__e2e__invalid_inputs-6.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).run()?"
---
fatal: no audit was performed
failed to register input: @@INPUT@@

Caused by:
    0: input does not match github_actions_models::workflow::Workflow validation schema
       
       Caused by:
           null is not of type "object"
           
    1: input does not match github_actions_models::action::Action validation schema
       
       Caused by:
           null is not of type "object"
           
    2: failed to register input as workflow or action
