tests/integration/snapshots/integration__e2e__invalid_inputs-8.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).run()?"
---
fatal: no audit was performed
failed to register input: @@INPUT@@

Caused by:
    0: input does not match github_actions_models::workflow::Workflow validation schema
       
       Caused by:
           Additional properties are not allowed ('inputs', 'outputs', 'runs' were unexpected)
           "on" is a required property
           "jobs" is a required property
           
    1: input does not match github_actions_models::action::Action validation schema
       
       Caused by:
           runs: Additional properties are not allowed ('image' was unexpected)
           runs: "using" is a required property
           runs: "main" is a required property
           runs: Additional properties are not allowed ('image' was unexpected)
           runs: "using" is a required property
           runs: "steps" is a required property
           runs: "using" is a required property
           outputs.some-output: "value" is a required property
           "description" is a required property
           
    2: failed to register input as workflow or action
